9.4 (final)/style.css
body {
    font-family: 'Roboto', sans-serif;
}

.navbar {
    margin: 0px;
}
.buttons{
    margin: 0px; 
}

@media screen and (min-width: 992px) {
    .navbar {
        padding: 0px 81px;
    }
}

@media screen and (min-width: 768px) and (max-width: 991px) {
    .navbar {
        padding: 0px 8px;
    }

}

@media screen and (max-width: 767px) {
    .navbar {
        padding: 0px 8px;
    }

    div.basket {
        display:none;
    }
}

.navbar {
    height: 72px;
    filter: drop-shadow();
    box-shadow: 0px 0px 16px rgba(38, 38, 38, 0.16);
}

img.basket {
    height: 22px;
    width: 19px;
    opacity: 0.6;
    padding-left: 27px;
}

button.enter {
    padding: 7px 20px;
    border: 1px solid #E0E0E0;
    background-color: white;
    border-radius: 2px;
    font-style: normal;
    font-weight: 500;
    font-size: 13px;
    line-height: 24px;
    color: #1D1D1D;
}

navbar.img{
    padding: 0px;
}

